--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
+    "gsap": "^3.8.0",
+    "lodash.throttle": "^4.1.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "tailwindcss": "3.3.2"
+    "react-scroll": "^1.8.9",
+    "react-scroll-parallax": "^3.4.2",
+    "tailwindcss": "3.3.2",
+    "tw-elements": "^1.0.0-beta2"
   }
 }
